--- a/dev/static/less/utils/vars.less
+++ b/dev/static/less/utils/vars.less
@@ -9,6 +9,7 @@
 @lightBgColor:          #f5f5f5;
 @menuBorderColor:       #3b3b3b;
 @menuBGHoverColor:      #404040;
+@filterColor:           #d1d1d1;
 
 
 // Sizes
