--- a/dev/pug/pages/index/popular.pug
+++ b/dev/pug/pages/index/popular.pug
@@ -1,64 +1,59 @@
-mixin popularItem(link,title,country)
-    li.popular-list__item
-        a(href= link).popular-list__link= title
-        span.popular-list__country= country
-
 section.popular
     .container
         h2.g-section-title.g-section-title--white Популярные бренды
-        ul.popular-list
-            +popularItem('','ADHOC ','Германия')
-            +popularItem('','aladdin ','США')
-            +popularItem('','alessi ','Италия')
-            +popularItem('','amt ','Германия')
-            +popularItem('','arcos ','Испания')
-            +popularItem('','bauscher ','Германия')
-            +popularItem('','beka ','бельгия')
-            +popularItem('','bialetti ','Италия')
-            +popularItem('','black+blum ','Великобритания')
-            +popularItem('','blomus ','Германия')
-            +popularItem('','bodum ','Швейцария')
-            +popularItem('','boker ','Германия')
-            +popularItem('','bugatti ','Италия')
-            +popularItem('','cristel ','Франция')
-            +popularItem('','cutipol ','Португалия')
-            +popularItem('','del ben ','Италия')
-            +popularItem('','edgeware ','США')
-            +popularItem('','element ','Швейцария')
-            +popularItem('','emerald  ','Таиланд')
-            +popularItem('','emily henry  ','Франция')
-            +popularItem('','emily  ','Китай')
-            +popularItem('','eva solo  ','Дания')
-            +popularItem('','evercut  ','Франция')
-            +popularItem('','fissler  ','Германия')
-            +popularItem('','garnier-thiebaut  ','Франция')
-            +popularItem('','giorinox  ','Германия')
-            +popularItem('','green pan  ','Бельгия')
-            +popularItem('','guede ','Германия')
-            +popularItem('','guzzini ','Италия')
-            +popularItem('','ibili ','Испания')
-            +popularItem('','ivv ','Италия')
-            +popularItem('','jacob jensen ','Дания')
-            +popularItem('','joseph joseph ','Великобритания')
-            +popularItem('','kinto ','Япония')
-            +popularItem('','kitchen aid ','США')
-            +popularItem('','koziol ','Германия')
-            +popularItem('','kyocera ','Япония')
-            +popularItem('','lacor ','Испания')
-            +popularItem('','legnoart ','Италия')
-            +popularItem('','lekue ','Испания')
-            +popularItem('','les-artistes-paris ','Франция')
-            +popularItem('','loooqs ','Нидерланды')
-            +popularItem('','lurch ','Германия')
-            +popularItem('','medard de noblat ','Франция')
-            +popularItem('','melior ','Швейцария')
-            +popularItem('','microplane ','США')
-            +popularItem('','midori ','Китай')
-            +popularItem('','monbento ','Франция')
-            +popularItem('','nachtmann ','Германия')
-            +popularItem('','nakumi ','Япония')
-            +popularItem('','novis vita ','Швейцария')
-            +popularItem('','nuance ','Дания')
-            +popularItem('','peugeot ','Франция')
+        ul.brands-list
+            +brandItem('','ADHOC ','Германия')
+            +brandItem('','aladdin ','США')
+            +brandItem('','alessi ','Италия')
+            +brandItem('','amt ','Германия')
+            +brandItem('','arcos ','Испания')
+            +brandItem('','bauscher ','Германия')
+            +brandItem('','beka ','бельгия')
+            +brandItem('','bialetti ','Италия')
+            +brandItem('','black+blum ','Великобритания')
+            +brandItem('','blomus ','Германия')
+            +brandItem('','bodum ','Швейцария')
+            +brandItem('','boker ','Германия')
+            +brandItem('','bugatti ','Италия')
+            +brandItem('','cristel ','Франция')
+            +brandItem('','cutipol ','Португалия')
+            +brandItem('','del ben ','Италия')
+            +brandItem('','edgeware ','США')
+            +brandItem('','element ','Швейцария')
+            +brandItem('','emerald  ','Таиланд')
+            +brandItem('','emily henry  ','Франция')
+            +brandItem('','emily  ','Китай')
+            +brandItem('','eva solo  ','Дания')
+            +brandItem('','evercut  ','Франция')
+            +brandItem('','fissler  ','Германия')
+            +brandItem('','garnier-thiebaut  ','Франция')
+            +brandItem('','giorinox  ','Германия')
+            +brandItem('','green pan  ','Бельгия')
+            +brandItem('','guede ','Германия')
+            +brandItem('','guzzini ','Италия')
+            +brandItem('','ibili ','Испания')
+            +brandItem('','ivv ','Италия')
+            +brandItem('','jacob jensen ','Дания')
+            +brandItem('','joseph joseph ','Великобритания')
+            +brandItem('','kinto ','Япония')
+            +brandItem('','kitchen aid ','США')
+            +brandItem('','koziol ','Германия')
+            +brandItem('','kyocera ','Япония')
+            +brandItem('','lacor ','Испания')
+            +brandItem('','legnoart ','Италия')
+            +brandItem('','lekue ','Испания')
+            +brandItem('','les-artistes-paris ','Франция')
+            +brandItem('','loooqs ','Нидерланды')
+            +brandItem('','lurch ','Германия')
+            +brandItem('','medard de noblat ','Франция')
+            +brandItem('','melior ','Швейцария')
+            +brandItem('','microplane ','США')
+            +brandItem('','midori ','Китай')
+            +brandItem('','monbento ','Франция')
+            +brandItem('','nachtmann ','Германия')
+            +brandItem('','nakumi ','Япония')
+            +brandItem('','novis vita ','Швейцария')
+            +brandItem('','nuance ','Дания')
+            +brandItem('','peugeot ','Франция')
         .content-center
             a(href="").g-btn Все бренды
