--- a/dev/static/less/modules/filter/filter.less
+++ b/dev/static/less/modules/filter/filter.less
@@ -1,9 +1,75 @@
 .filter {
+  position: relative;
+  background-color: @lightBgColor;
+  padding: 30px;
+  &-input {
+    width: 100%;
+    border: 1px solid @filterColor;
+    background-color: @white;
+    box-shadow: inset 0 1px 5px 1px rgba(0, 0, 0, .1);
+  }
+  &-line {
+    display: flex;
+    justify-content: space-between;
+  }
+  &-top {
+    &__item {
+      flex-shrink: 0;
+      width: 35%;
+      &.filter-top__item--color {
+        width: 25%;
+      }
+    }
+
+
+  }
+  &-count-res {
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0 20px;
+    height: 40px;
+    line-height: 40px;
+    background-color: @lightBgColor;
+  }
+  &-item {
+    &__title {
+      display: block;
+      font-family: @bold-font;
+      margin-bottom: 10px;
+    }
+  }
+  &-price {
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 15px;
+    }
+    &__link {
+      border-bottom: 1px dotted @linkBorderColor;
+      font-size: 15px;
+    }
+    &__text {
+      display: flex;
+      align-items: center;
+    }
+    &__val {
+      display: flex;
+      justify-content: space-between;
+      flex-shrink: 0;
+      width: 130px;
+      margin-right: 10px;
+      align-items: center;
+      span { margin-right: 10px; }
+    }
+  }
   &-color {
     position: relative;
     width: 25px;
     height: 25px;
     border: 1px solid @filterColor;
+    transition: all linear .2s;
     &__item {
       margin-right: 10px;
       &:last-child { margin-right: 0; }
@@ -14,9 +80,10 @@
       input[type="checkbox"] {
         display: none;
         &:checked {
-          &~.checkbox-custom {
-            &:after {
-              content: '';
+          &~.filter-color {
+            border: 2px solid @blackColor;
+            .filter-color__icon {
+              opacity: 1;
             }
           }
         }
@@ -29,15 +96,34 @@
       background-color: @white;
       width: 12px;
       height: 12px;
-      .checkbox-custom__icon {
+      opacity: 0;
+      transition: all linear .2s;
+      .check__icon {
         width: 9px;
         height: 9px;
+        position: absolute;
+        bottom: 0;
       }
     }
     &__list {
       display: flex;
+      margin-bottom: 20px;
+    }
+  }
+  &-brands {
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    &__item {
+      width: 30%;
+      flex-shrink: 0;
+      margin-bottom: 10px;
     }
   }
 }
 
-
+.count-res__number {
+  font-family: @bold-font;
+}
