--- a/dev/static/less/modules/forms/forms.less
+++ b/dev/static/less/modules/forms/forms.less
@@ -11,3 +11,42 @@
 .g-label {
   color: @white;
 }
+
+.checkbox {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding-left: 25px;
+
+  input[type="checkbox"] {
+    display: none;
+
+    &:checked {
+      &~.checkbox-custom {
+        .check__icon {
+          display: block;
+        }
+      }
+    }
+  }
+  &-custom {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 15px;
+    height: 15px;
+    border: 1px solid @filterColor;
+    background-color: @white;
+    box-shadow: inset 0 1px 5px 1px rgba(0, 0, 0, .1);
+    .check__icon {
+      display: none;
+      width: 10px;
+      height: 10px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+    }
+  }
+  &.checkbox--bold { font-family: @bold-font; }
+}
