--- a/dev/pug/catalog.pug
+++ b/dev/pug/catalog.pug
@@ -14,6 +14,7 @@ block content
                     a(href="").breadcrumbs-list__link Хранение вина
 
     include modules/filter/filter
+    include pages/catalog/catalog-result/index
     include pages/catalog/brands
     include pages/index/promo
 
