--- a/dev/static/less/pages/pages.less
+++ b/dev/static/less/pages/pages.less
@@ -10,3 +10,5 @@
 @import "product/product-tabs";
 @import "product/you-see";
 @import "catalog/brands";
+@import "catalog/catalog-result";
+@import "catalog/catalog-sort";
