Начал реализовывать табы for customer #17@7:50

--- a/dev/pug/pages/catalog/catalog-result/index.pug
+++ b/dev/pug/pages/catalog/catalog-result/index.pug
@@ -1,11 +1,13 @@
 section.catalog-result
     .container
         include catalog-sort
-        .catalog-view.catalog-view--lines
+        .catalog-view
             include product1
             include product1
             include product1
             include product1
+        //.catalog-view--2col
+        //.catalog-view--lines
         .catalog-nav
             a(href="").g-btn.g-btn--black.g-btn--no-underline Показать еще
             ul.catalog-pag
