--- a/dev/static/less/pages/catalog/catalog-lines.less
+++ b/dev/static/less/pages/catalog/catalog-lines.less
@@ -54,6 +54,18 @@
           border-bottom: 1px solid @linkBorderColor;
         }
       }
+      &__text {
+        display: block;
+        width: 49%;
+
+      }
+      &__middle-content {
+        display: flex;
+        justify-content: space-between;
+        &-left {
+          width: 49%;
+        }
+      }
     }
     .product-lines-info {
       order: 2;
