--- a/dev/static/less/pages/catalog/catalog-result.less
+++ b/dev/static/less/pages/catalog/catalog-result.less
@@ -82,6 +82,16 @@
       .share { display: none; }
     }
     .g-btn-one-click { display: none; }
+    .product-prev__text {
+      display: none;
+      p {
+        line-height: 1.3;
+        margin-bottom: 15px;
+      }
+      &-link {
+        border-bottom: 1px solid @linkBorderColor;
+      }
+    }
   }
   &-nav {
     position: relative;
@@ -133,4 +143,5 @@
       transform: translate(-50%,-50%);
     }
   }
+
 }
