--- a/dev/pug/pages/for-customer/return/banner.pug
+++ b/dev/pug/pages/for-customer/return/banner.pug
@@ -1,6 +1,6 @@
-.tab-content__item.tab-exchange
-    .page-banner.page-banner--for-customer.page-banner--exchange
+.tab-content__item.tab-return
+    .page-banner.page-banner--for-customer.page-banner--return
         .container
-            .page-banner__content.page-benner__content--exchange
-                h2.g-section-title Об обмене товаров
+            .page-banner__content.page-benner__content--return
+                h2.g-section-title О возврате товаров
                 p.page-banner__text Если вы увлечены как самой едой, так и ее приготовлением, вы, скорее всего, неравнодушны к винам. Также вполне вероятно, что в один прекрасный момент вас может посетить мысль купить винный шкаф для правильного хранения вина, подаренного друзюями, привезенного из-за границы или купленного по случаю.
