--- a/dev/pug/pages/for-customer/return/content.pug
+++ b/dev/pug/pages/for-customer/return/content.pug
@@ -1,3 +1,3 @@
-.tab-content__item.tab-exchange
+.tab-content__item.tab-return
     p.for-customer__text Если вы увлечены как самой едой, так и ее приготовлением, вы, скорее всего, неравнодушны к винам. Также вполне вероятно, что в один прекрасный момент вас может посетить мысль купить винный шкаф для правильного хранения вина, подаренного друзюями, привезенного из-за границы или купленного по случаю.
     p.for-customer__text Если вы увлечены как самой едой, так и ее приготовлением, вы, скорее всего, неравнодушны к винам. Также вполне вероятно, что в один прекрасный момент вас может посетить мысль купить винный шкаф для правильного хранения вина, подаренного друзюями, привезенного из-за границы или купленного по случаю.
