--- a/dev/static/less/pages/pages.less
+++ b/dev/static/less/pages/pages.less
@@ -14,3 +14,4 @@
 @import "catalog/catalog-sort";
 @import "catalog/catalog-2col";
 @import "catalog/catalog-lines";
+@import "for-customer/for-customer";
