--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -17,3 +17,8 @@ mixin brandItem(link,title,country)
 	li.brands-list__item
 		a(href= link).brands-list__link= title
 		span.brands-list__country= country
+
+//Табы
+mixin tabsLink (show,text)
+	li.tabs-list__item(show-tab= show)&attributes(attributes)
+		span.tabs-list__text= text
